--- a/src/index.css
+++ b/src/index.css
@@ -5,81 +5,8 @@ body {
   font-family: 'STIX Two Math', serif;
 }
 
-.home {
-  background-color: rgb(92, 187, 15);
-  max-width: 500px;
-  text-align: center;
-  margin: auto;
-  margin-top: 5rem;
-  border: 1px solid rgb(101, 167, 211);
-  padding: 1rem;
-}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* h2 {
+h2 {
   letter-spacing: 1px;
   font-family: 'Roboto', sans-serif;
 }
@@ -132,4 +59,4 @@ table, th, td {
 
 td {
   color: yellow;
-} */
+}
